# actions

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-ci.yml  code-analysis-ci.yml  linux-ci.yml  windows-ci.yml
includes/: config.h
modules/: Finally.h
src/: main.cc
